--- a/app/views/public/documents/edit.html.erb
+++ b/app/views/public/documents/edit.html.erb
@@ -9,7 +9,7 @@
         <!--タグ投稿フォーム-->
         <div class="form-group text-left mt-3 col-8 offset-2">
           <%= f.label :tag_name, "タグをつけてください" %><br>
-          <%= f.text_field :tag_name, value: @tag_list, class: "form-control form-control-sm" %>
+          <%= f.text_field :tag_name, autofocus: true, value: @tag_list, class: "form-control form-control-sm" %>
         </div>
         <!--感情ステータスを選択-->
         <div class="form-group text-left mt-3 col-8 offset-2">
