--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -17,7 +17,7 @@
         </div>
         <!--メールアドレス-->
         <div class="form-group text-left mt-3 col-8 offset-2">
-          <%= f.label :email %><br />
+          <%= f.label :email %><br>
           <%= f.email_field :email, autocomplete: "email", class: "form-control form-control-sm" %>
         </div>
         <!--パスワード-->
@@ -30,7 +30,7 @@
         </div>
         <!--パスワード確認用-->
         <div class="form-group text-left mt-3 col-8 offset-2">
-          <%= f.label :password_confirmation %><br />
+          <%= f.label :password_confirmation %><br>
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-sm" %>
         </div>
         <!--登録ボタン-->
