--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -15,6 +15,28 @@ footer {
   color: #727068;
 }
 
+// message
+.notifications {
+  color: #fff;
+  text-align: center;
+  position :absolute;
+  top: 10;
+  width: 100%;
+  z-index: 3;
+}
+
+.notice {
+  color: #083629;
+  background-color: #a8e6cf;
+}
+
+.alert {
+  padding: 0;
+  color: #541306;
+  background-color: #ffaaa5;
+  htight: 20px;
+}
+
 // card
 .cards__item {
   flex-basis: 25%;
