--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,3 +1,13 @@
-<% flash.each do |message_type, message| %>
-　<div class="alert alert-<%= message_type %>"><%= message %></div>
-<% end %>
+<div class="notifications">
+  <% flash.each do |key, value| %>
+    <div class="flash text-center">
+      <%= content_tag(:div, value, class: key) %>
+    </div>
+  <% end %>
+</div>
+
+<script>
+  $(function() {
+    setTimeout("$('.flash').fadeOut('slow')", 4000);
+  });
+</script>
