--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,16 +53,16 @@
           <%= render 'layouts/search_form'%>
         </div>
         <!--タブ-->
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <%= link_to admin_path do %>
+            <%= link_to admin_path, class: 'btn btn-secondary rounded-pill mx-3 my-1' do %>
               <div class="flex-colum mx-3 text_center">
                 <i class="fas fa-users"></i> ユーザー
               </div>
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to destroy_admin_session_path, method: :delete do %>
+            <%= link_to destroy_admin_session_path, method: :delete, class: 'btn btn-secondary rounded-pill mx-3 my-1' do %>
               <div class="flex-colum mx-3 text_center">
                 <i class="fas fa-sign-out-alt"></i> ログアウト
               </div>
@@ -71,23 +71,23 @@
         </ul>
       <!--ログイン前-->
       <% else %>
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <%= link_to new_end_user_registration_path do %>
+            <%= link_to new_end_user_registration_path, class: 'btn btn-secondary rounded-pill mx-3 my-1' do %>
               <div class="flex-colum mx-3 text_center">
                 <i class="fas fa-user-plus"></i> 新規登録
               </div>
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to new_end_user_session_path do %>
+            <%= link_to new_end_user_session_path, class: 'btn btn-secondary rounded-pill mx-3 my-1' do %>
               <div class="flex-colum mx-3 text_center">
                 <i class="fas fa-sign-in-alt"></i> ログイン
               </div>
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to end_users_guest_sign_in_path, method: :post do %>
+            <%= link_to end_users_guest_sign_in_path, method: :post, class: 'btn btn-secondary rounded-pill mx-3 my-1' do %>
               <div class="flex-colum mx-3 text_center">
                 <i class="fas fa-user-check"></i> ゲストログイン
               </div>
