--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,12 +1,20 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
-// header, footer
+// header
 header{
   height: 100px;
   background-color: #ece6d6;
 }
 
+.logo-name {
+  text-decoration: none;
+  color: #181717;
+  font-size: 40px;
+  line-height: 80px;
+}
+
+// footer
 footer {
   background-color:#ece6d6;
 }
