--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -22,20 +22,24 @@
     <!--right side-->
     <div class="col-10 text-center mb-1">
       <!--投稿数-->
-      <h3>
-        今月の投稿数は
+      <h3 class="mb-2 mb-5">
+        1ヶ月間の投稿数は
         <%= current_end_user.documents.where('created_at > ?', Date.today.month).count %>件、
         今までの投稿数は
         <%= current_end_user.documents.all.count %>件です
       </h3>
       <!--投稿数のグラフ-->
       <div class="d-flex justify-content-center">
-        <div style="position:relative;width:500px;height:350px;">
+        <div style="position:relative;width:500px;height:300px;">
           <%= render 'public/end_users/line_chart', documents: @documents %>
         </div>
       </div>
+      <!---->
+      <h3 class="mb-2 mb-5">
+        1ヶ月間の感情の統計です
+      </h3>
       <!--感情のグラフ-->
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center mb-3">
         <div style="position:relative;width:450px;height:450px;">
           <%= render 'public/end_users/doughnut_chart', documents: @documents %>
         </div>
