--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -2,21 +2,29 @@
   <div class="row">
     <!--left side-->
     <div class="col-2 text-center">
-      <h2 class="font-weight-bold">マイページ</h2>
+      <h2 class="font-weight-bold mb-3">マイページ</h2>
       <!--プロフィール画像-->
       <%= image_tag @end_user.get_profile_image(100,100), class: "rounded-circle" %>
       <!--ユーザー名-->
       <p><%= @end_user.name %></p>
       <!--お気に入り-->
-      <%=link_to end_user_favorites_path(current_end_user) do %>
-        <i class="fas fa-tag"></i> お気に入りリスト
-      <% end %>
+      <div class="mt-2 mb-4">
+        <%=link_to end_user_favorites_path(current_end_user) do %>
+          <i class="fas fa-tag"></i> お気に入りリスト
+        <% end %>
+      </div>
       <!--ボタン-->
-      <% if @end_user.name != "guestuser" %>
-        <%= link_to "編集", edit_end_user_path(@end_user),
-            class: "btn btn-outline-success btn-sm rounded-pill mt-1 edit_user_#{@end_user.id}" %>
-        <%= link_to "退会", end_user_confirm_path(@end_user),
-            class: "btn btn-outline-danger btn-sm rounded-pill mt-1 edit_user_#{@end_user.id}" %>
+      <%= link_to edit_end_user_path(@end_user),
+          class: "btn btn-outline-success btn-sm rounded-pill mb-2 mt-1 edit_user_#{@end_user.id}" do %>
+        <div class="flex-colum mx-3 text_center">
+          <i class="fas fa-edit"></i> 編集
+        </div>
+      <% end %>
+      <%= link_to end_user_confirm_path(@end_user),
+          class: "btn btn-outline-danger btn-sm rounded-pill mt-1 edit_user_#{@end_user.id}" do %>
+        <div class="flex-colum mx-3 text_center">
+          <i class="fas fa-reply-all"></i> 退会
+        </div>
       <% end %>
     </div>
     <!--right side-->
@@ -39,7 +47,7 @@
         1ヶ月間の感情の統計です
       </h3>
       <!--感情のグラフ-->
-      <div class="d-flex justify-content-center mb-3">
+      <div class="d-flex justify-content-center mb-4">
         <div style="position:relative;width:450px;height:450px;">
           <%= render 'public/end_users/doughnut_chart', documents: @documents %>
         </div>
