--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,30 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 text-center">
+      <!--ロゴマーク-->
+      <%= image_tag "logo-m.png", size: "700x600" %>
+      <!--説明文-->
+      <div class="mb-3">
+        <h2 class="font-weight-bold">あなたの人生を記録しませんか？</h2>
+        <p class="mt-3 mb-5">
+          その瞬間に感動したことを自分だけのライフログとして記録することができるサービスです。<br>
+          記録した出来事を振り返り、自分と向き合う時間を作りましょう。
+        </p>
+        <div class="mb-5">
+          <!--新規登録-->
+          <%= link_to new_end_user_registration_path, class: 'btn btn-success rounded-pill mx-3 my-1' do %>
+            <div class="flex-colum mx-3 text_center">
+              <i class="fas fa-user-plus"></i> 新規登録
+            </div>
+          <% end %>
+          <!--ゲストログイン-->
+          <%= link_to end_users_guest_sign_in_path, method: :post, class: 'btn btn-primary rounded-pill mx-3 my-1' do %>
+            <div class="flex-colum mx-3 text_center">
+              <i class="fas fa-user-check"></i> ゲストログイン
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
