[Update]画像を削除

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -48,12 +48,12 @@ footer {
 }
 
 .notice {
-  background-color: #a8e6cf;
+  background-color: #00b8a9;
 }
 
 .alert {
   padding: 0;
-  background-color: #ffaaa5;
+  background-color: #f6416c;
   htight: 20px;
 }
 
