--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
       <div class='col-12'>
       
         <div class="text-center my-2">
-          <%= link_to "利用規約", root_path %> | 
+          <%= link_to "利用規約", service_path %> | 
           <%= link_to "プライバシーポリシー", root_path %>
         </div>
       
