--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
       
         <div class="text-center my-2">
           <%= link_to "利用規約", service_path %> | 
-          <%= link_to "プライバシーポリシー", root_path %>
+          <%= link_to "プライバシーポリシー", privacy_path %>
         </div>
       
         <div class="text-center footer-text">
