--- a/app/views/public/documents/new.html.erb
+++ b/app/views/public/documents/new.html.erb
@@ -7,31 +7,33 @@
         <!--タグ投稿フォーム-->
         <div class="form-group text-left mt-3 mb-5 col-8 offset-2">
           <%= f.label :tag_name, "タグをつけてください" %><br>
-          <%= f.text_field :tag_name, autofocus: true, placeholder: "複数つける場合は,で区切ってください", class: "form-control form-control-sm" %>
+          <%= f.text_field :tag_name, autofocus: true, placeholder: "複数つける場合は,で区切ってください",
+              class: "form-control form-control-sm" %>
         </div>
         <!--感情ステータスを選択-->
         <div class="form-group text-left mt-3 col-8 offset-2">
           <p>今の気持ちを選んでください</p>
+          <!--感情：happy-->
           <%= f.radio_button :feeling, :happy, class: "hidden_radio" %>
           <%= f.label :feeling, class: 'feeling_icon check_radio', for: "document_feeling_happy" do %>
             <i class="radio_icon fas fa-grin"></i>
           <% end %>
-          
+          <!--感情：anger-->
           <%= f.radio_button :feeling, :anger, class: "hidden_radio" %>
           <%= f.label :feeling, class: 'feeling_icon', for: "document_feeling_anger" do %>
             <i class="fas fa-angry"></i>
           <% end %>
-          
-          <%= f.radio_button :feeling, :sorrow, class: "hidden_radio" %>
-          <%= f.label :feeling, class: 'feeling_icon', for: "document_feeling_sorrow" do %>
-            <i class="fas fa-sad-tear"></i>
-          <% end %>
-          
+          <!--感情：normal-->
           <%= f.radio_button :feeling, :normal, class: "hidden_radio" %>
           <%= f.label :feeling, class: 'feeling_icon', for: "document_feeling_normal" do %>
             <i class="fas fa-meh"></i>
           <% end %>
-          
+          <!--感情：sorrow-->
+          <%= f.radio_button :feeling, :sorrow, class: "hidden_radio" %>
+          <%= f.label :feeling, class: 'feeling_icon', for: "document_feeling_sorrow" do %>
+            <i class="fas fa-sad-tear"></i>
+          <% end %>
+          <!--感情：tired-->
           <%= f.radio_button :feeling, :tired, class: "hidden_radio" %>
           <%= f.label :feeling, class: 'feeling_icon', for: "document_feeling_tired" do %>
             <i class="fas fa-tired"></i>
